Fix name and about overflow issues for mobile

--- a/personal-website/src/styling/App.css
+++ b/personal-website/src/styling/App.css
@@ -34,7 +34,7 @@ a:hover {
   left: 15%;
   float: left;
   width: 30%;
-  overflow: auto;
+  overflow: visible;
 }
 
 #navigation-bar-right-side-links-container {
@@ -58,6 +58,7 @@ a:hover {
   display: inline;
   width: 20%;
   padding: 1%;
+  overflow: 
 }
 
 #contact-container {
@@ -84,9 +85,11 @@ z-index: 50;
 
 #about-container {
   position: fixed;
+  overflow: scroll;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   font: 20px Cotham-Sans, sans-serif;
   z-index: 50;
+  max-height: 70%;
 }
